# Heres

./: .gitignore  .vercelignore  README.md  crank.patch  decode_pid.ts  deploy-full.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  twa-manifest.json  vercel.json  verification_complete_log.txt  verification_log.txt  verification_result.txt  verification_result_2.txt  verification_result_3.txt  verify_output.txt
app/: env.d.ts  globals.css  layout.tsx  page.tsx  providers.tsx
app/capsules/: page.tsx
components/: AsciiCapsule.tsx  CapsuleMediaBlock.tsx  Cube3D.tsx  Footer.tsx  HeresPromoReel.tsx  Hero3D.tsx  HeroCapsuleVideo.tsx  Navbar.tsx  PartnerLogos.tsx  SequenceDiagram.tsx  WorkflowDemo.tsx  WorldMapWhy.tsx
config/: solana.ts
constants/: architecture.ts  index.ts  promoSpec.ts  rsmGeographyPath.ts
heres_program/: Anchor.toml
idl/: HeresProgram.json  heres_program.json  lucid_program.json
lib/: crank.ts  helius.ts  program.ts  solana.ts  tee.ts
lucid_program/: Anchor.toml
lucid_program/programs/lucid_program/: Cargo.toml
lucid_program/programs/lucid_program/src/: lib.rs
public/: manifest.json  service-worker.js
scripts/: check_bytes.ts  check_id.js  check_program.ts  check_program_v2.js  check_program_v2.ts  check_tee_program.ts  diag_7lg.js  fix_capsule_detail_page.js  fix_create_page.js  fix_dashboard_page.js  fix_readme.js  generate-icons.js  reset_capsules.js  reset_capsules.ts  verify_complete_flow.ts  verify_flow.ts
types/: index.ts
utils/: intent.ts  validation.ts
(+7 files in other folders)
