[package]
name = "lucid_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_program"

[features]
default = []
oracle = ["pyth-solana-receiver-sdk"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ephemeral-rollups-sdk = { version = "0.8", features = ["anchor"] }
magicblock-magic-program-api = { version = "0.3", default-features = false }
bincode = "1.3"
pyth-solana-receiver-sdk = { version = "0.6", optional = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
